# WholeArmSkin

arduino/: calibration.ino  read_taxel_data.ino
arduino/ProtoCentral_FDC1004_Capacitive_Sensor_Library/src/: Protocental_FDC1004.cpp  Protocentral_FDC1004.h
wholearm_ws/: fitted_poly3_model_0427_06.pickle  readme.md
wholearm_ws/controller_ws/: frames.gv
wholearm_ws/controller_ws/.catkin_tools/profiles/default/: devel_collisions.txt
wholearm_ws/controller_ws/devel/: .catkin  .rosinstall  local_setup.sh
wholearm_ws/controller_ws/devel/.private/ada_description/: .catkin  local_setup.sh
wholearm_ws/controller_ws/devel/.private/behaviortree_cpp/: .catkin  .rosinstall  setup.sh
wholearm_ws/controller_ws/devel/.private/catkin_tools_prebuild/: .catkin
wholearm_ws/controller_ws/devel/.private/kortex_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
wholearm_ws/controller_ws/devel/.private/kortex_hardware/: .catkin  local_setup.sh  setup.sh
wholearm_ws/controller_ws/devel/.private/position_command_controller/: .catkin  setup.sh
wholearm_ws/controller_ws/devel/.private/pr_assets/: .catkin  setup.sh
wholearm_ws/controller_ws/devel/.private/pr_control_msgs/: .catkin  local_setup.sh  setup.sh
wholearm_ws/controller_ws/devel/.private/pr_hardware_interfaces/: .catkin  local_setup.sh  setup.sh
wholearm_ws/controller_ws/devel/.private/pr_ros_controllers/: .catkin  .rosinstall  setup.sh
wholearm_ws/controller_ws/devel/.private/rewd_controllers/: .catkin  setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial/: .catkin  local_setup.sh  setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_arduino/: .catkin  .rosinstall  local_setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_chibios/: .catkin  .rosinstall  setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_client/: .catkin  .rosinstall  setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_embeddedlinux/: .catkin  .rosinstall  setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_mbed/: .catkin  .rosinstall  local_setup.sh
wholearm_ws/controller_ws/devel/.private/rosserial_msgs/: .catkin
wholearm_ws/controller_ws/devel/.private/rosserial_python/: .catkin  setup.sh
wholearm_ws/controller_ws/logs/wholearm_skin_ros/: build.make.000.log.stderr
wholearm_ws/controller_ws/logs/yui_bathing/: build.make.000.log.stderr
wholearm_ws/controller_ws/src/ada_description/: .travis.yml
wholearm_ws/controller_ws/src/kortex_hardware/: CMakeLists.txt  README.md  package.xml
wholearm_ws/controller_ws/src/kortex_hardware/include/: Gen3Robot.h  LowPassFilter.h
wholearm_ws/controller_ws/src/kortex_hardware/include/client/: IRouterClient.h  RouterClient.h
wholearm_ws/controller_ws/src/kortex_hardware/scripts/: test_actioninterface  test_gripper.py  test_position.py  test_position_pub.py
wholearm_ws/controller_ws/src/kortex_hardware/src/: Gen3Robot.cpp  LowPassFilter.cpp  main.cpp
wholearm_ws/controller_ws/src/pr_control_msgs/: CMakeLists.txt
wholearm_ws/controller_ws/src/pr_control_msgs/action/: SetForceTorqueThreshold.action
wholearm_ws/controller_ws/src/pr_hardware_interfaces/: README.md
wholearm_ws/controller_ws/src/pr_tsr/: .clang-format  .travis.yml  CMakeLists.txt  README.md
wholearm_ws/controller_ws/src/pr_tsr/include/pr_tsr/: block.hpp  block_bin.hpp  can.hpp  fuze.hpp  glass.hpp  table.hpp
wholearm_ws/controller_ws/src/wholearm_skin_ros/: README.md
wholearm_ws/controller_ws/src/yui_bathing/: CMakeLists.txt  package.xml
wholearm_ws/wholearm_ws/: Msquishy.pickle  data_collection_100HZ.pickle  data_collection_200HZ.pickle  data_collection_400HZ.pickle  data_collection_Mbend2.pickle  data_collection_Mbubble1.pickle  data_collection_Mbubble2.pickle  data_collection_Mbubble3.pickle  data_collection_Mpush.pickle  data_collection_Mstretch.pickle  data_collection_Mstretch3.pickle  data_collection_active_shielding.pickle  data_collection_chara_stretch.pickle  data_collection_chara_stretch1.pickle  data_collection_chara_stretch2.pickle  data_collection_chara_stretch3.pickle  data_collection_chara_stretch4.pickle  data_collection_compress0.pickle  data_collection_compress2_1.pickle  data_collection_compress3_1.pickle  data_collection_mathbend.pickle  data_collection_mathmodel_value.pickle  data_collection_mathmodel_value3.pickle  data_collection_mathpush.pickle  data_collection_mathstretch.pickle  data_collection_mathtwist.pickle  data_collection_no_shielding.pickle  data_collection_onarm_noshield.pickle  data_collection_onarm_shield.pickle  data_collection_ontable.pickle  data_collection_ontable_noshield.pickle  data_collection_passive_shielding.pickle  fitted_poly3_model_0427_05.pickle  inference_data_l6t3_0217.pickle  robot.json  robot_backup.json  robot_marcus.json  taxelpos.json
wholearm_ws/wholearm_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
wholearm_ws/wholearm_ws/logs/pr_assets/: build.cmake.000.log.stderr
wholearm_ws/wholearm_ws/logs/tams_wireless_ft/: build.make.000.log.stderr
wholearm_ws/wholearm_ws/src/pr_control_msgs/: README.md
wholearm_ws/wholearm_ws/src/pr_hardware_interfaces/: LICENSE
wholearm_ws/wholearm_ws/src/rosserial_noetic/: README.md
wholearm_ws/wholearm_ws/src/tams_wireless_ft/: CMakeLists.txt  README.md  package.xml
wholearm_ws/wholearm_ws/src/tams_wireless_ft/config/: bottle_opening.rviz  bottle_opening_plotjuggler.xml
wholearm_ws/wholearm_ws/src/tams_wireless_ft/doc/: calibration.txt  example_dump_data.txt  telnet_session.txt
wholearm_ws/wholearm_ws/src/tams_wireless_ft/launch/: rviz_demo.launch  wireless_ft.launch  wireless_ft_bottle.launch
wholearm_ws/wholearm_ws/src/tams_wireless_ft/scripts/: plot_t1.sh  plot_t2.sh  plot_t3.sh  plot_t4.sh  plot_t5.sh  reset_ft_bias.py
wholearm_ws/wholearm_ws/src/tams_wireless_ft/src/: wireless_ft.cpp
wholearm_ws/wholearm_ws/src/user_study/: record.sh
wholearm_ws/wholearm_ws/src/wholearm_skin_ros/: readme_characteristic_experiment.md
(+1702 files in other folders)
